# python-project-52

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codecoverage.yml  tests.yml
task_manager/: filters.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py  views_backup.py
task_manager/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html  labels_create.html  labels_delete.html  labels_list.html  labels_update.html  login.html  register.html  statuses_create.html  statuses_delete.html  statuses_list.html  statuses_update.html  tasks_create.html  tasks_delete.html  tasks_detail.html  tasks_list_old.html  tasks_list_with_filter.html  test.html  update.html  users_delete.html  users_details.html  users_list.html  users_update (?).html
task_manager/tests/: test_label.py  test_status.py  test_task.py  test_user.py
