[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The fourth edu project on Hexlet called \"Task Manager\"."
authors = ["eugenenazirov <jagzonmusic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
