[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The fourth edu project on Hexlet called \"Task Manager\"."
authors = ["eugenenazirov <jagzonmusic@gmail.com>"]
packages = [
    { include = "task_manager" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
django-bootstrap4 = "^22.2"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
gunicorn = "^20.1.0"
django-extensions = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
